# rust-buildout-releaser

./: .gitignore  Cargo.toml  README.md  agent.md
.github/workflows/: rust.yml
scripts/: install.sh
src/: buildout.rs  changelog.rs  cli.rs  config.rs  error.rs  git.rs  main.rs  pypi.rs  version.rs
