[package]
name = "rust-buildout-releaser"
version = "0.3.0-a.1"
edition = "2021"
description = "A zc.buildout package releaser tool"
authors = ["Antoine Duchêne <adu@imio.be>"]

[[bin]]
name = "bldr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Async runtime & HTTP
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for parsing buildout files
regex = "1.10"

# Colored output
colored = "2.0"
indicatif = "0.17"

# Semver parsing
semver = "1.0"

# Interactive prompts
dialoguer = "0.11"

# Date handling
chrono = { version = "0.4", features = ["clock"] }

# Git operations (optional, we'll mainly use CLI)
# git2 = "0.18"  # Uncomment if you want libgit2 bindings
